codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: tui/src/app.rs
expression: rendered
---
╭─────────────────────────────────────────────────────────╮
│ >_ Open Codex Unleashed (v<VERSION>)                    │
│                                                         │
│ Fork of OpenAI Codex v0.87.0 by Laurent-Philippe Albou. │
│ Controls model, reasoning, agent spawning, and /save    │
│ exports.                                                │
│ source: https://github.com/lpalbou/codex                │
│ date: <DATE>                                            │
│                                                         │
│ model:     gpt-test high   /model to change             │
│ directory: /tmp/project                                 │
╰─────────────────────────────────────────────────────────╯
